--- a/main.css
+++ b/main.css
@@ -21,13 +21,29 @@ li {
 ul {
     font-family: helvetica;
 }
+.btn {
+    position: absolute;
+    top: 20px;
+    left: 250px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    color: var(--btnFontColor);
+    background-color: var(--btnBg);
+}
+.btn:focus{outline-style: none;}
 
 .light-theme {
     --bg:var(--green);
     --fontcolor: var(--black);
+    --btnBg: var(--black);
+    --btnFontColor: var(--white);
 }
 
 .dark-theme {
     --bg:var(--black);
     --fontcolor: var(--green);
+    --btnBg: var(--white);
+    --btnFontColor: var(--black);
 }
